2.2.8
 * MemoryUtil.getShort() should return an unsigned short also for architectures not supporting unaligned memory accesses (CASSANDRA-11973)
Merged from 2.1:
 * Don't write shadowed range tombstone (CASSANDRA-12030)
 * Improve digest calculation in the presence of overlapping tombstones (CASSANDRA-11349)
 * Fix filtering on clustering columns when 2i is used (CASSANDRA-11907)
 * Account for partition deletions in tombstone histogram (CASSANDRA-12112)


2.2.7
 * Allow nodetool info to run with readonly JMX access (CASSANDRA-11755)
 * Validate bloom_filter_fp_chance against lowest supported
   value when the table is created (CASSANDRA-11920)
 * RandomAccessReader: call isEOF() only when rebuffering, not for every read operation (CASSANDRA-12013)
 * Don't send erroneous NEW_NODE notifications on restart (CASSANDRA-11038)
 * StorageService shutdown hook should use a volatile variable (CASSANDRA-11984)
 * Persist local metadata earlier in startup sequence (CASSANDRA-11742)
 * Run CommitLog tests with different compression settings (CASSANDRA-9039)
 * cqlsh: fix tab completion for case-sensitive identifiers (CASSANDRA-11664)
 * Avoid showing estimated key as -1 in tablestats (CASSANDRA-11587)
 * Fix possible race condition in CommitLog.recover (CASSANDRA-11743)
 * Enable client encryption in sstableloader with cli options (CASSANDRA-11708)
 * Possible memory leak in NIODataInputStream (CASSANDRA-11867)
 * Fix commit log replay after out-of-order flush completion (CASSANDRA-9669)
 * Add seconds to cqlsh tracing session duration (CASSANDRA-11753)
 * Prohibit Reverse Counter type as part of the PK (CASSANDRA-9395)
 * cqlsh: correctly handle non-ascii chars in error messages (CASSANDRA-11626)
 * Exit JVM if JMX server fails to startup (CASSANDRA-11540)
 * Produce a heap dump when exiting on OOM (CASSANDRA-9861)
 * Avoid read repairing purgeable tombstones on range slices (CASSANDRA-11427)