@@ -1,4 +1,5 @@
 2.2.8
+ * Improve streaming synchronization and fault tolerance (CASSANDRA-11414)
  * MemoryUtil.getShort() should return an unsigned short also for architectures not supporting unaligned memory accesses (CASSANDRA-11973)
 Merged from 2.1:
  * Don't write shadowed range tombstone (CASSANDRA-12030)
